<resources>
    <string name="app_name">GeoDream Alpha Companion App</string>
    <string name="navigate_login">Navigate to LogInActivity</string>
    <string name="navigate_user_homepage">Navigate to UserHomepageActivity</string>
    <string name="navigate_str_minigame">Navigate to StrengthMinigameActivity</string>
    <string name="navigate_walk_challenge">Navigate to WalkingChallengeActivity</string>

    <string name="email">Email</string>
    <string name="password_label">Password</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="sign_in_instead">Sign In Instead</string>
    <string name="sign_up_instead">Learn How To Sign-Up</string>
    <string name="new_user_label">New to GeoDream Alpha?</string>
    <string name="goBack">Go Back</string>

    <string name="about_text">GeoDream Alpha is an action-RPG available now on your desktop PC!\n
        \n
        Fight challenging enemies, gain experience, and level up alongside your companion, as you
        fight to survive for as long as possible. Once you\'ve made an account on the desktop game,
        come back here to log-in, after which you can start leveling up your companion character to
        make them stronger! There is no way to level up your companion in the desktop game, so make
        sure you come back to train them here!\n
        \n
        GeoDream Alpha (Desktop Game) is currently available on [Steam].
    </string>

    <string name="homepage_temp_text">Welcome! This is where the user homepage will go!</string>
    <string name="username_display">username</string>
    <string name="companion_name">companion name</string>
    <string name="str"><u><b>STR</b></u></string>
    <string name="spd"><u><b>SPD</b></u></string>
    <string name="strength"><u><b>STRENGTH</b></u></string>
    <string name="speed"><u><b>SPEED</b></u></string>
    <string name="temp_value">666</string>

    <string name="nav_account_header">Account &amp; Homepage</string>
    <string name="nav_homepage">My Home</string>
    <string name="nav_games_header">Level Up Your Companion!</string>
    <string name="nav_str_minigame">Strength Minigame</string>
    <string name="nav_spd_challenge">Walking Challenge</string>

    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <string name="strength_minigame_explanation">Welcome to the Strength Minigame! Rapidly press the button
        below to make your companion do barbell lifts. Fill up the bar below to level up and increase
        your companion\'s strength stat in the desktop game!</string>
    <string name="get_buff">GET BUFF!</string>
    <string name="lift_count_label">Total # of sick gains you\'ve performed:</string>
    <string name="next_level_label">Total # of radical lifts needed to level up:</string>

    <string name="speed_minigame_explanation">Welcome to the Walking Challenge! We\'ll
    keep track of the steps you walk. Walk enough to fill up the bar below to level up and increase
    your companion\'s speed stat in the desktop game! Please keep the app running to properly track
        steps.
        \n\nPLEASE NOTE: There may be a long delay (~30s) between you walking
        and the steps showing up in the app. We apologize for any inconvenience.</string>
    <string name="step_count_label">Total # of steps you\'ve walked:</string>
    <string name="step_next_level_label">Total # of steps needed to level up:</string>

</resources>