<?xml version="1.0" encoding="utf-8"?>
<!--Aaron Schwartz-->
<!--Aaron Schwartz-->
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/toolbar_main"
            android:id="@+id/toolbar"
            />

        <TextView
            android:id="@+id/speed_page_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/speed_minigame_explanation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"/>

        <ImageView
            android:id="@+id/companion_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxWidth="150dp"
            android:maxHeight="150dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/companioniconrunning"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/speed_page_description"/>

        <TextView
            android:id="@+id/companion_name_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/companion_name"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/companion_image"
            app:layout_constraintEnd_toEndOf="@id/companion_image"
            app:layout_constraintTop_toBottomOf="@id/companion_image"/>

        <TextView
            android:id="@+id/speed_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed"
            android:layout_marginTop="50dp"

            app:layout_constraintStart_toEndOf="@id/companion_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/speed_page_description"
            app:layout_constraintVertical_chainStyle="packed"/>

        <TextView
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/temp_value"
            android:textSize="40sp"
            app:layout_constraintStart_toEndOf="@id/companion_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/speed_label"
            app:layout_constraintVertical_chainStyle="packed"/>

        <TextView
            android:id="@+id/step_count_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_count_label"
            app:layout_constraintBottom_toBottomOf="@id/step_count"
            app:layout_constraintEnd_toStartOf="@id/step_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/step_count" />

        <TextView
            android:id="@+id/step_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/next_level"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/step_count_label"
            app:layout_constraintTop_toBottomOf="@id/companion_image"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/next_level_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_next_level_label"
            app:layout_constraintBottom_toBottomOf="@id/next_level"
            app:layout_constraintEnd_toStartOf="@id/next_level"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/next_level" />

        <TextView
            android:id="@+id/next_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/step_count_label"
            app:layout_constraintTop_toBottomOf="@id/step_count"
            app:layout_constraintBottom_toTopOf="@id/step_progressbar"
            app:layout_constraintVertical_chainStyle="packed" />

        <ProgressBar
            android:id="@+id/step_progressbar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:minWidth="300dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/companion_image"
            app:layout_constraintBottom_toBottomOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:itemTextColor="@color/white"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/navigation_drawer" />


</androidx.drawerlayout.widget.DrawerLayout>