<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinator"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".EditPersonalGameActivity">

            <Button
                android:id="@+id/navigate_to_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/navigate_login"
                android:padding="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:onClick="onClickNavigateToLogin"/>

            <Button
                android:id="@+id/navigate_to_user_homepage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/navigate_user_homepage"
                android:padding="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/navigate_to_login"
                android:onClick="onClickNavigateToUserHomepage"
                />

            <Button
                android:id="@+id/navigate_to_strength_minigame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/navigate_str_minigame"
                android:padding="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/navigate_to_user_homepage"
                android:onClick="onClickNavigateToStrengthMinigame"
                />

            <Button
                android:id="@+id/navigate_to_walking_challenge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/navigate_walk_challenge"
                android:padding="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/navigate_to_strength_minigame"
                android:onClick="onClickNavigateToWalkingChallenge"
                />

            <TextView
                android:id="@+id/userManagerHelloText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/navigate_to_walking_challenge"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>